# cagd-rational-bezier

./: .gitignore  CMakeLists.txt
src/app/: CMakeLists.txt  Canvas.cpp  Canvas.hpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
src/app/models/: PointModel.cpp  PointModel.hpp
src/app/views/: PointListView.cpp  PointListView.hpp
src/curve_lib/: CMakeLists.txt  DeCasteljauAlgorithm.cpp  DeCasteljauAlgorithm.hpp  RationalBezierPoint.cpp  RationalBezierPoint.hpp
test/: CMakeLists.txt  DeCasteljauAlgorithmTests.cpp
